@@ -1,3 +1,7 @@
+* Fri Dec 30 2016 Dylan Cochran <dylan.cochran@onyxpoint.com> - 3.1.0-0
+- Use hiera moduledata instead of a hard coded arrray
+- Add ignore for ^pe-.*  
+
 * Sat Dec 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
 - Updated to use the Puppet Concat module
 
